--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:mxDLyBx8Gr7PQazn25eSCyMGOXKXTUv+itOqECdoosw=
+APP_KEY=  #Generate the key here!!
 APP_DEBUG=true
 APP_URL=http://localhost:8069
 
