--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:mxDLyBx8Gr7PQazn25eSCyMGOXKXTUv+itOqECdoosw=
+APP_KEY=  #Generate the key here!!
 APP_DEBUG=true
 APP_URL=http://localhost:8069
 
@@ -20,12 +20,14 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=172.22.0.13
-DB_PORT=81
-DB_DATABASE=modem
-DB_USERNAME=praktikanti1
-DB_PASSWORD=albismart\
+
+DB_CONNECTION=sqlite
+#DB_CONNECTION=mysql
+#DB_HOST=172.22.0.13
+#DB_PORT=81
+#DB_DATABASE=modem
+#DB_USERNAME=praktikanti1
+#DB_PASSWORD=albismart
     # IMPORTANT
 #Please check the DB_USERNAME if it matches your given user!!!
 
